--- a/src/assets/css/main.css
+++ b/src/assets/css/main.css
@@ -22,6 +22,15 @@
     font-size: 14px;
 }
 
+.mini-text {
+    font-size: 10px;
+}
+
+.question-font {
+    font-size: 23px;
+    font-weight: 400;
+}
+
 .w-90 {
     width: 90% !important;
 }
@@ -40,4 +49,8 @@
 
 .margin--10 {
     margin-left: -10%;
+}
+
+.clickable {
+    cursor: pointer;
 }
